= Changelog

== Version 1.3.0

[small]#Released at xx.xx.xxxx#

* https://github.com/svenkubiak/mangooio/issues/71[#71] Added autostart option to scheduler (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** yyy -> xxx

== Version 1.2.0

[small]#Released at 17.10.2015#

* https://github.com/svenkubiak/mangooio/issues/33[#33] Added Cookie versioning (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/57[#57] Added OAuth to authentication (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/61[#61] Move Body to Request (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/58[#58] Added @metrics administrative URL (svenkubiak)
* Added PUT and DELETE to MangooRequest in test utilities (svenkuibiak)
* Fixed typo in MangooRequestFilter interface (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow 1.2.12.Final -> 1.3.0.Final
** quartz 2.2.1 -> 2.2.2
** jetty-websocket 8.1.17.v20150415 -> 8.1.18.v20150929

== Version 1.1.4

[small]#Released at 04.10.2015#

* Fixed bug when sending binary content (svenkubiak)
* ExceptionHandler now preserves root cause when exception occurs (svenkubiak)

== Version 1.1.3

[small]#Released at 21.09.2015#

* https://github.com/svenkubiak/mangooio/issues/62[#62] Set default encoding (UTF-8) to form parsing (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/59[#59] Fixed a NPE when template exception was caught (svenkubiak)

== Version 1.1.2

[small]#Released at 17.09.2015#

* Fixed a NPE when a Request object and JSON was required in a controller method (svenkubiak)
* Refactored dev mode exception template (svenkubiak)
* Fixed bug that did not show exception in frontend in dev mode (svenkubiak)
* Fixed typo in ContentType enum (svenkubiak)

== Version 1.1.1

[small]#Released at 15.09.2015#

* Updated Documentation (svenkubiak)

== Version 1.1.0

[small]#Released at 14.09.2015#

* Refactored RequestHandler (svenkubiak)